# mapchete

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  README.rst  Untitled.ipynb  generalize.py  herbert.tif  import_mapchete.py  import_rasterio.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  temp.py
.github/: dependabot.yml
.github/workflows/: python-package.yml  python-publish.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
cli/: __init__.py  create.py  execute.py  main.py  mapchete_execute.py  mapchete_serve.py  raster2pyramid.py  serve.py  tilify.py
configs/: biggles.yaml  dem_check.yaml
core/: __init__.py  mapchete.py
doc/: Makefile  README.rst  cli.rst  common_functions.md  common_functions.rst  configuration.md  configuration.rst  installation.md  installation.rst  processes.md  processes.rst  structure.md
doc/source/: cli.rst  common_functions.rst  conf.py  configuration.rst  index.rst  installation.rst  misc.rst  modules.rst  process_input.rst  process_output.rst  processes.rst  requirements.txt  tiling.rst
docs/: google_zooms.csv  wgs84_zooms.csv
examples/clip/: clip.mapchete
examples/contours/: contours.mapchete
examples/custom_grid/: custom_grid.mapchete
examples/custom_tile_size/: custom_tile_size.mapchete
examples/file_groups/: file_groups.mapchete  file_groups.py
examples/hillshade/: hillshade.mapchete
io/: __init__.py
mapchete/: __init__.py  _batch.py  _core.py  _deprecated.py  _distributed.py  _executor.py  _processing.py  _registered.py  _tasks.py  _timer.py  _user_process.py  _validate.py  bounds.py  commons.py  config.py  config_utils.py  core.py  enums.py  errors.py  formats.py  grid.py  index.py  io_utils.py  job.py  log.py  log_utils.py  mapchete.py  numpy_io.py  path.py  pretty.py  protocols.py  pyramids.py  registered.py  settings.py  stac.py  testing.py  tests.py  tile.py  tilematrix.py  timer.py  (+3 more)
mapchete/cli/: __init__.py  _utils.py  create.py  execute.py  formats.py  index.py  main.py  mpath.py  options.py  progress_bar.py  pyramid.py  serve.py  tilify.py  utils.py
mapchete/commands/: __init__.py  _convert.py  _cp.py  _execute.py  _index.py  _job.py  _rm.py  convert.py  cp.py  execute.py  index.py  observer.py  parser.py  rm.py
mapchete/commons/: __init__.py  clip.py  contours.py  hillshade.py
mapchete/config/: __init__.py  _parse_input.py  _parse_input_files.py  base.py  models.py  parse.py  process_func.py
mapchete/executor/: __init__.py  base.py  concurrent_futures.py  dask.py  future.py  sequential.py  types.py
mapchete/formats/: __init__.py  base.py  drivers.py  loaders.py  metadata.py  models.py  protocols.py  tile_directory.py  tools.py
mapchete/geometry/: __init__.py  clip.py  filter.py  footprints.py  latlon.py  repair.py  reproject.py  segmentize.py  shape.py  transform.py  types.py
mapchete/io/: __init__.py  _geometry_operations.py  _json.py  _misc.py  _path.py  path.py  profiles.py  raster.py  settings.py  vector.py
mapchete/io_utils/: __init__.py  formats.py  io_funcs.py  numpy_data.py  numpy_io.py  raster_data.py  raster_io.py  vector_data.py  vector_io.py
mapchete/log/: __init__.py
mapchete/logging/: __init__.py
mapchete/processes/: __init__.py  clip.py  contours.py  convert.py  hillshade.py
mapchete/processing/: __init__.py  base.py  compute.py  execute.py  job.py  models.py  mp.py  tasks.py  types.py
mapchete/static/: index.html  mapchete_template.mapchete  process_template.py
mapchete/testdata/: bbox.geojson  multiline.geojson  multipolygon.geojson  point.geojson  points.geojson  polygons.geojson
modules/: mapchete_commons.py  tilematrix-io.py  tilematrix.py  tilematrix_io.py
src/: mapchete.py
static/: index.html  mapchete_template.mapchete  process_template.py
test/: .htpasswd  README.rst  all.py  config.json  conftest.py  docker-compose.yml  example.mapchete  example_configuration.yaml  example_process.py  example_process_as_function.py  merge_dems.py  merge_dems.yaml  nginx.conf  process.py  requirements.txt  test_bounds.py  test_cli.py  test_cli_mpath.py  test_commands.py  test_commons.py  test_config.py  test_deprecated.py  test_errors.py  test_examples.py  test_executor.py  test_formats.py  test_formats_flatgeobuf.py  test_formats_geobuf.py  test_formats_geojson.py  test_formats_geotiff.py  test_formats_png.py  test_formats_png_hillshade.py  test_formats_raster_file.py  test_formats_tiledir_input.py  test_formats_vector_file.py  test_grid.py  test_index.py  test_io.py  test_io_path.py  test_io_raster.py  (+17 more)
test/cli/: test_main.py  test_mpath.py  test_options.py
test/commands/: __init__.py  test_convert.py  test_cp.py  test_execute.py  test_index.py  test_rm.py
test/config/: test_base.py  test_config.py  test_models.py  test_parse.py  test_process_func.py
test/executor/: test_base.py  test_concurrent_futures.py  test_dask.py  test_future.py
test/geometry/: test_filter.py  test_footprints.py  test_latlon.py  test_repair.py  test_reproject.py  test_segmentize.py  test_shape.py  test_types.py
test/testdata/: 4band_test.tif  abstract_input.mapchete  antimeridian.geojson  aoi_br.geojson  aoi_br.mapchete  baselevels.mapchete  baselevels_custom_nodata.mapchete  baselevels_output_buffer.mapchete  cleantopo.tif.aux.xml  cleantopo_br.mapchete  cleantopo_br.tif  cleantopo_br_mercator.mapchete  cleantopo_br_metatiling_1.mapchete  cleantopo_br_tiledir.mapchete  cleantopo_br_tiledir_mercator.mapchete  cleantopo_landpoly.tif  cleantopo_read_lower_zoom.mapchete  cleantopo_remote.mapchete  cleantopo_tl.mapchete  cleantopo_tl.tif  custom_grid.json  custom_grid.mapchete  custom_grid_crs_bounds.mapchete  custom_grid_points.geojson  custom_grid_points.mapchete  dask_specs.mapchete  dem_to_contours.mapchete  dem_to_hillshade.mapchete  dem_to_hillshade.py  deprecated_params.mapchete  dummy1.tif  dummy1_3857.tif  dummy2.tif  empty.gpkg  env_input_path.mapchete  env_storage_options.mapchete  (+65 more)
tools/: mapchete.py  mptest.py  test.py
(+254 files in other folders)
